+added api documentation (swagger) +misc improvements